Added minecraft user which can now run minecraft